Run Markdown Script with make
Created a Makefile to be used to run R markdown scripts. See README for more info. Also created R and html subdirectories. The repo should contain the html subdirectory but not the files in it.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
 .Rproj*
-
 data/addresses/*
 api_keys/*
 figures/*
-
 .Rhistory
 .Rproj.user
+*.md
+.DS_Store
+!README.md
+.Rhistory
+*\.\#*
+data
+!data/
+.RData
+data-bkup/
+data-bkup
+*.R
+*.bak
+archive/
