changed .gitignore to include new osm_edit dirs

--- a/docker/brouter/osm_edit/.gitignore
+++ b/docker/brouter/osm_edit/.gitignore
@@ -3,11 +3,8 @@
 # Except this file
 !.gitignore
 
-# Except osm_edit configuration files
-!process_pbf.sh
-!srtm/srtm_tiles.csv
-
 # Except osm_edit directories
-!brouter_segments/
 !pbf_files/
-!srtm/
+!srtm3/
+!brouter-tmp/
+!segments/
